--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     }
     
     h3 {
-        color: #475569;
-        font-size: 24px;
+        color: ##C11007;
+        font-size: 27px;
         font-weight: 600;
         margin-bottom: 20px;
         margin-top: 30px;
@@ -2411,5 +2411,6 @@
 </body>
 
 </html>
+
 
 
