--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     }
     
     h3 {
-        color: ##C11007;
+        color: #C11007;
         font-size: 27px;
         font-weight: 600;
         margin-bottom: 20px;
@@ -2411,6 +2411,7 @@
 </body>
 
 </html>
+
 
 
 
