--- a/index.html
+++ b/index.html
@@ -892,6 +892,16 @@
             </div>
         </div>
         
+		<div class="slide">
+            <div class="content" style="text-align: center;">
+                <h3>Gram Stain of Urethral Smear</h3>
+                <img class="slide-image" src="https://github.com/prof-bandar/moh-sti/blob/main/13_ng-01.png" alt="Gram stain showing Neisseria gonorrhoeae">
+                <p style="margin-top: 15px; font-size: 16px;">
+                    <em>Image shows gram-negative intracellular diplococci (GNDC) within a polymorphonuclear leukocyte, characteristic of N. gonorrhoeae.</em>
+                </p>
+            </div>
+        </div>
+		
         <!-- Slide 14: Gonorrhea NAAT -->
         <div class="slide">
             <div class="slide-header">
@@ -2411,6 +2421,7 @@
 </body>
 
 </html>
+
 
 
 
