--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         .slide-header-box h1,
         .slide-header-box h2 {
-            font-size: 20px;
+            font-size: 27px;
             font-weight: 700;
             line-height: 1.2;
             margin: 0;
@@ -148,7 +148,7 @@
 
         /* Typography */
         h1 {
-            font-size: 42px;
+            font-size: 51px;
             font-weight: 800;
             color: #1e293b;
             margin-bottom: 20px;
@@ -156,7 +156,7 @@
         }
 
         h2 {
-            font-size: 28px;
+            font-size: 37px;
             font-weight: 700;
             color: #334155;
             margin-bottom: 16px;
@@ -164,7 +164,7 @@
         }
 
         h3 {
-            font-size: 20px;
+            font-size: 27px;
             font-weight: 600;
             color: #dc2626;
             margin-top: 20px;
@@ -172,7 +172,7 @@
         }
 
         h4 {
-            font-size: 18px;
+            font-size: 25px;
             font-weight: 600;
             color: #3b82f6;
             margin-top: 16px;
@@ -180,14 +180,14 @@
         }
 
         p {
-            font-size: 16px;
+            font-size: 23px;
             line-height: 1.6;
             color: #475569;
             margin-bottom: 12px;
         }
 
         ul, ol {
-            font-size: 16px;
+            font-size: 23px;
             line-height: 1.6;
             color: #475569;
             margin-bottom: 16px;
@@ -200,12 +200,12 @@
 
         /* Compact text for dense slides */
         .compact {
-            font-size: 15px;
+            font-size: 19px;
             line-height: 1.5;
         }
 
         .compact ul, .compact ol {
-            font-size: 15px;
+            font-size: 19px;
             line-height: 1.5;
         }
 
@@ -229,7 +229,7 @@
             padding: 10px 12px;
             text-align: left;
             font-weight: 600;
-            font-size: 13px;
+            font-size: 19px;
             text-transform: uppercase;
             letter-spacing: 0.05em;
         }
@@ -237,7 +237,7 @@
         td {
             padding: 10px 12px;
             border-bottom: 1px solid #e5e7eb;
-            font-size: 14px;
+            font-size: 19px;
         }
 
         tr:last-child td {
@@ -277,7 +277,7 @@
             color: #d97706;
             display: block;
             margin-bottom: 6px;
-            font-size: 14px;
+            font-size: 19px;
             text-transform: uppercase;
             letter-spacing: 0.05em;
         }
@@ -420,7 +420,7 @@
                 <h1 style="color: #1e293b; font-size: 48px; margin-bottom: 28px;">Laboratory Diagnosis of<br>Sexually Transmitted Infections</h1>
                 <p style="font-size: 22px; color: #64748b; margin-bottom: 40px;">Comprehensive Guide for Healthcare Professionals</p>
                 <div style="display: flex; gap: 40px; align-items: center; justify-content: center;">
-                    <img src="https://via.placeholder.com/120x120/3b82f6/ffffff?text=MOH" alt="MOH Logo" style="height: 120px;">
+                    <img src="https://en.wikipedia.org/wiki/Ministry_of_Health_%28Saudi_Arabia%29#/media/File:Saudi_Ministry_of_Health_Logo.svg" alt="MOH Logo" style="height: 120px;">
                     <div style="text-align: left;">
                         <p style="font-size: 18px; color: #475569; margin-bottom: 8px;"><strong>Ministry of Health - Saudi Arabia</strong></p>
                         <p style="font-size: 16px; color: #64748b;">STI Control Program</p>
@@ -2855,3 +2855,4 @@
     </script>
 </body>
 </html>
+
